--- a/index.html
+++ b/index.html
@@ -1650,11 +1650,11 @@
             alt="Jugar lOTERIA" loading="lazy">
           </div>
           <div class="promo-body">
-            <span class="badge">Juega ahora</span>
-            <h3 class="promo-title">Loteria El Mexiquense</h3>
-            <p class="promo-text">🎉 Diviértete 🎉
- 🥳 Juega en familia o con tus amigos, descarga la loteria, una nuestra app ¡Y que gane el mejor!</p>
-            <a class="btn promo-cta" href="https://oscararmando2.github.io/Loteria/loteria.html">Jugar</a>
+            <span class="badge">Servicio</span>
+            <h3 class="promo-title">Cambio de cheques</h3>
+            <p class="promo-text">🎉 Tarifas bajas y al instante🎉
+Sujeto a Disponibilidad</p>
+            <a class="btn promo-cta" href="#contacto">Jugar</a>
           </div>
         </article>
 
