Add rewards and extra service cards to promos carousel

--- a/index.html
+++ b/index.html
@@ -1658,6 +1658,34 @@ Sujeto a Disponibilidad</p>
           </div>
         </article>
 
+        <!-- Card 5 -->
+        <article class="promo-card">
+          <div class="promo-media" aria-hidden="true">
+            <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=800&q=80"
+                 alt="Programa de recompensas con tarjeta" loading="lazy">
+          </div>
+          <div class="promo-body">
+            <span class="badge">Rewards</span>
+            <h3 class="promo-title">Programa de Rewards</h3>
+            <p class="promo-text">Acumula puntos en cada compra y cámbialos por descuentos especiales, regalos y experiencias para tu familia.</p>
+            <a class="btn promo-cta" href="#contacto">Inscribirme</a>
+          </div>
+        </article>
+
+        <!-- Card 6 -->
+        <article class="promo-card">
+          <div class="promo-media" aria-hidden="true">
+            <img src="https://images.unsplash.com/photo-1586880244406-556ebe35f282?auto=format&fit=crop&w=800&q=80"
+                 alt="Persona cambiando un cheque en ventanilla" loading="lazy">
+          </div>
+          <div class="promo-body">
+            <span class="badge">Servicio</span>
+            <h3 class="promo-title">Canbio de cheques</h3>
+            <p class="promo-text">Servicio rápido y seguro todos los días. Trae tu identificación oficial y retira tu dinero en minutos.</p>
+            <a class="btn promo-cta" href="#contacto">Saber más</a>
+          </div>
+        </article>
+
       <!-- controles -->
       <div class="carousel-controls">
         <button class="cbtn" id="prevBtn" aria-label="Anterior">‹</button>
