--- a/index.html
+++ b/index.html
@@ -1661,12 +1661,12 @@ Sujeto a Disponibilidad</p>
         <!-- Card 5 -->
         <article class="promo-card">
           <div class="promo-media" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=800&q=80"
+            <img src="https://scontent-qro1-2.xx.fbcdn.net/v/t39.30808-6/559231839_820793204263696_7658248066248306568_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=jjCmUp03oGoQ7kNvwFe-zQG&_nc_oc=AdmGwkwRu-89lgPKhmq6iJKf2fmIE7CspV8yKhLwysTIlgpk1i1kzrOaDEGGa6TvrjLjoWPbi1Q4Gn1KjbTmAy6t&_nc_zt=23&_nc_ht=scontent-qro1-2.xx&_nc_gid=VBikkWUKbCFstQAa9aueAw&oh=00_AfecVSqRkvjUwBWMAfr1cWddl15U7ywFqB23OBravf-9_w&oe=6905B52C"
                  alt="Programa de recompensas con tarjeta" loading="lazy">
           </div>
           <div class="promo-body">
             <span class="badge">Rewards</span>
-            <h3 class="promo-title">Programa de Rewards</h3>
+            <h3 class="promo-title">Programas de lealtad</h3>
             <p class="promo-text">Acumula puntos en cada compra y cámbialos por descuentos especiales, regalos y experiencias para tu familia.</p>
             <a class="btn promo-cta" href="#contacto">Inscribirme</a>
           </div>
@@ -1675,13 +1675,13 @@ Sujeto a Disponibilidad</p>
         <!-- Card 6 -->
         <article class="promo-card">
           <div class="promo-media" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1586880244406-556ebe35f282?auto=format&fit=crop&w=800&q=80"
+            <img src="https://img.freepik.com/fotos-premium/entrega-dolares-efectivo-otra-parte-aislada-sobre-fondo-blanco_199352-304.jpg"
                  alt="Persona cambiando un cheque en ventanilla" loading="lazy">
           </div>
           <div class="promo-body">
             <span class="badge">Servicio</span>
             <h3 class="promo-title">Canbio de cheques</h3>
-            <p class="promo-text">Servicio rápido y seguro todos los días. Trae tu identificación oficial y retira tu dinero en minutos.</p>
+            <p class="promo-text">Servicio rápido y seguro todos los días. Trae tu identificación oficial y retira tu dinero en minutos con tarifas bajas y justas. (Sujeto a Disponibilidad en Tienda)</p>
             <a class="btn promo-cta" href="#contacto">Saber más</a>
           </div>
         </article>
