--- a/index.html
+++ b/index.html
@@ -1631,7 +1631,7 @@
         <!-- Card 3 -->
         <article class="promo-card">
           <div class="promo-media" aria-hidden="true">
-<img src="https://scontent-qro1-1.xx.fbcdn.net/v/t39.30808-6/571192028_820624640947219_1301184161211471798_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=4rOX4aJY-Z0Q7kNvwGzZzR1&_nc_oc=AdkK0mmPdnnMzFhAz4Jzky0zB9b2Bf7ijLJbBkCgmTVZlhTXHoHr7JTxmWWoi-O1LENwbdea42xdLyeVWjzkKRaF&_nc_zt=23&_nc_ht=scontent-qro1-1.xx&_nc_gid=t2ch1Rlksx53fjsdgeZoHQ&oh=00_Afc36YyIczGUJvi_xwle8rX_Lwfbgxwi3ch0Hkx_wkcBFA&oe=6905941F"
+<img src="https://scontent-qro1-2.xx.fbcdn.net/v/t39.30808-6/571170452_820748727601477_8539968529484520597_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=GrDSF1iKCSUQ7kNvwF2oSfr&_nc_oc=AdkuMw5Vt8rMSIIKEUDGDhIyfDRGGfbTVJU90FR3j3se3lne0nOxJYnHTb5kBNDvrD-b8xHRgpA2_lGlp1UYjLXw&_nc_zt=23&_nc_ht=scontent-qro1-2.xx&_nc_gid=a2_zRM1OfpzuVyVv0VUbxw&oh=00_AfczIQt2-4ot9gKl5f-1HSU_zeB1ftK3CrhLadV3ZUKhQg&oe=6905E416"
             alt="Miércoles de descuentos" loading="lazy">
           </div>
           <div class="promo-body">
@@ -1650,10 +1650,9 @@
             alt="Jugar lOTERIA" loading="lazy">
           </div>
           <div class="promo-body">
-            <span class="badge">Servicio</span>
-            <h3 class="promo-title">Cambio de cheques</h3>
-            <p class="promo-text">🎉 Tarifas bajas y al instante🎉
-Sujeto a Disponibilidad</p>
+            <span class="badge">Juega</span>
+            <h3 class="promo-title">Loteria El Mexiquense</h3>
+            <p class="promo-text">Pasa un rato agradable con tu familia y amigos jugando a la loteria, ve a nuestra app, descarga los tableros y tarjetas ¡Y que gane el mejor! Loteria diseñada y con productos de toda LatinoAmerica</p>
             <a class="btn promo-cta" href="#contacto">Jugar</a>
           </div>
         </article>
