--- a/index.html
+++ b/index.html
@@ -1607,10 +1607,10 @@
                  alt="Promoción de ofertas exclusivas — productos frescos" loading="lazy">
           </div>
           <div class="promo-body">
-            <span class="badge">OFERTA</span>
+            <span class="badge">OFERTAS</span>
             <h3 class="promo-title">Descubre ofertas exclusivas</h3>
-            <p class="promo-text">Descuentos especiales en tus productos latinos favoritos. Siguenos en todas las redes y enterate de las ofertas exclusivas de redes sociales que tenemos para ti. </p>
-            <a class="btn promo-cta" href="https://whatsapp.com/channel/0029VbBpK3I2f3EFCBkqI42g">Ver más</a>
+            <p class="promo-text"> Siguenos en nuestro canal de Whastapp para enterarte de ofertas exclusivas que tenemos para ti. </p>
+            <a class="btn promo-cta" href="https://whatsapp.com/channel/0029VbBpK3I2f3EFCBkqI42g">Unirme</a>
           </div>
         </article>
 
@@ -1652,7 +1652,7 @@
           <div class="promo-body">
             <span class="badge">Juega</span>
             <h3 class="promo-title">Loteria El Mexiquense</h3>
-            <p class="promo-text">Pasa un rato agradable con tu familia y amigos jugando a la loteria, ve a nuestra app, descarga los tableros y tarjetas ¡Y que gane el mejor! Loteria diseñada y con productos de toda LatinoAmerica</p>
+            <p class="promo-text">Pasa un rato agradable con tu familia y amigos, ve a nuestra app, descarga los tableros y tarjetas ¡Y que gane el mejor!</p>
             <a class="btn promo-cta" href="#contacto">Jugar</a>
           </div>
         </article>
@@ -1666,7 +1666,7 @@
           <div class="promo-body">
             <span class="badge">Rewards</span>
             <h3 class="promo-title">Programas de lealtad</h3>
-            <p class="promo-text">Acumula puntos en cada compra y cámbialos por descuentos especiales, regalos y experiencias para tu familia.</p>
+            <p class="promo-text">Acumula puntos en cada compra y cámbialos por descuentos especiales.</p>
             <a class="btn promo-cta" href="#contacto">Inscribirme</a>
           </div>
         </article>
@@ -1680,7 +1680,8 @@
           <div class="promo-body">
             <span class="badge">Servicio</span>
             <h3 class="promo-title">Canbio de cheques</h3>
-            <p class="promo-text">Servicio rápido y seguro todos los días. Trae tu identificación oficial y retira tu dinero en minutos con tarifas bajas y justas. (Sujeto a Disponibilidad en Tienda)</p>
+            <p class="promo-text">Trae tu identificación oficial y retira tu dinero en minutos con tarifas bajas y justas.
+              (Sujeto a Disponibilidad en Tienda)</p>
             <a class="btn promo-cta" href="#contacto">Saber más</a>
           </div>
         </article>
