--- a/index.html
+++ b/index.html
@@ -1587,10 +1587,10 @@
   <!-- ===== HERO ===== -->
   <section id="inicio" class="hero">
     <div class="container">
-      <h1>El Sabor de México en Cada Compra</h1>
+      <h1>El Sabor de Latino en Cada Compra</h1>
       <p>Frescura diaria • Precios justos • Calidad garantizada</p>
       <div class="hero-actions" role="group" aria-label="Acciones destacadas">
-        <a class="btn" href="#promociones">Ver promociones</a>
+        <a class="btn" href="https://whatsapp.com/channel/0029VbBpK3I2f3EFCBkqI42g">Ver promociones</a>
         <a class="btn btn-outline" href="#ofertas">Ofertas del día</a>
       </div>
     </div>
