--- a/index.html
+++ b/index.html
@@ -1722,10 +1722,11 @@
   <!-- ===== SECCIONES DEMO ===== -->
   <section id="productos" class="section">
     <h2 class="section-title">MIERCOLAZO DE DESCUENTO %</h2>
-    <p class="muted">Promos que se renuevan cada miércoles con 24 horas de ahorro y, el resto de la semana, sorpresas relámpago cada dos minutos.</p>
+    <p class="muted">Promos que se renuevan todos los miércoles..</p>
+    <p class="muted">Promociones validas solo el día 29 de Octubre</p> 
     <div class="product-carousel" role="list">
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>MIERCOLAZO DE DESCUENTO %</span><span class="timer countdown-timer">--:--:--</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Harina Pan</span><span class="timer countdown-timer">--:--:--</span></span>
         <div class="product-media" aria-hidden="true">
           <img src="https://m.media-amazon.com/images/I/71Lxe9rdyQL.jpg" alt="Paquete de harina P.A.N." loading="lazy">
         </div>
