Update lottery image source in index.html

--- a/index.html
+++ b/index.html
@@ -2067,7 +2067,7 @@
         <a class="btn loteria-cta" href="https://oscararmando2.github.io/Loteria/loteria.html" target="_blank" rel="noopener" aria-label="Jugar lotería en línea con tu familia">¡Juega ahora!</a>
       </div>
       <figure class="loteria-media">
-        <img src="https://scontent-qro1-2.xx.fbcdn.net/v/t39.30808-6/559231839_820793204263696_7658248066248306568_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=jjCmUp03oGoQ7kNvwFe-zQG&_nc_oc=AdmGwkwRu-89lgPKhmq6iJKf2fmIE7CspV8yKhLwysTIlgpk1i1kzrOaDEGGa6TvrjLjoWPbi1Q4Gn1KjbTmAy6t&_nc_zt=23&_nc_ht=scontent-qro1-2.xx&_nc_gid=VBikkWUKbCFstQAa9aueAw&oh=00_AfecVSqRkvjUwBWMAfr1cWddl15U7ywFqB23OBravf-9_w&oe=6905B52C" loading="lazy">
+        <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t39.30808-6/571212017_798623846483485_7127450510447971433_n.jpg?stp=dst-jpg_s1080x2048_tt6&_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=k85onK-uoksQ7kNvwGbCPZX&_nc_oc=AdlL_eYim0YuYY_lj7NOa18_ruyTZb3lDDYWj9X5J28QCPUU3cnOMRObedYCm0Dob-Jq2RaKBC4Q_l6mifbjltb1&_nc_zt=23&_nc_ht=scontent-qro1-1.xx&_nc_gid=C49yzAnr0X_VtW_Rdkiz8Q&oh=00_AffunWRYTuPNAn0BRyoc9ljDJxM7W2gGcO3bqW-2JtiPIw&oe=6905D09B" loading="lazy">
       </figure>
     </div>
   </section>
